--- a/public/css/animaux.scss
+++ b/public/css/animaux.scss
@@ -154,3 +154,76 @@
 {
     margin-left: 35%;
 }
+
+/* The popup form - hidden by default */
+.form-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    z-index: 9;
+    width: 50%;
+    align-items: center ;
+    justify-content: center;
+    margin-bottom: 5%;
+    margin-right: 23%;
+    background-color: white;
+    border-radius: 20px;
+    border:solid 2px rgb(1, 129, 113);
+    box-shadow: 0 5px 5px rgba(white, 0.2);
+    
+   
+  
+  }
+   
+  /* Add styles to the form container */
+  .form-container {
+    width:50%;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 20px;
+    border:solid 2px rgb(1, 129, 113);
+    box-shadow: 0 5px 5px rgba(white, 0.2);
+    margin-top: 2%;
+    margin-left: 30%;
+
+  
+  }
+
+  .formCss {
+    border: solid 1px #e8e8e9;
+    width: 100%;
+    background-color: transparent;
+    margin: 10px 0;
+    height: 40px;
+    border-radius: 40px;
+    padding: 0 0.2rem;
+    display: grid;
+    grid-template-columns: 100%;
+    position: relative;
+    &:hover 
+    {
+        border-color: rgb(1, 129, 113);
+    }    
+}
+
+.formCss input {
+    background: transparent;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 400;
+    font-size: 1.7rem;
+    color: rgb(1, 129, 113);
+    padding-left: 2%;
+  }
+
+
+
+.errormsg
+{
+  text-align: center;
+  color: red;
+  font-size: small;
+}
