--- a/public/css/animaux.css
+++ b/public/css/animaux.css
@@ -166,4 +166,82 @@
 #donationButton {
   margin-left: 35%;
 }
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  z-index: 9;
+  width: 50%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 5%;
+  margin-right: 23%;
+  background-color: white;
+  border-radius: 20px;
+  border: solid 2px #018171;
+  -webkit-box-shadow: 0 5px 5px rgba(255, 255, 255, 0.2);
+          box-shadow: 0 5px 5px rgba(255, 255, 255, 0.2);
+}
+
+/* Add styles to the form container */
+.form-container {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 20px;
+  border-radius: 20px;
+  border: solid 2px #018171;
+  -webkit-box-shadow: 0 5px 5px rgba(255, 255, 255, 0.2);
+          box-shadow: 0 5px 5px rgba(255, 255, 255, 0.2);
+  margin-top: 2%;
+  margin-left: 30%;
+}
+
+.formCss {
+  border: solid 1px #e8e8e9;
+  width: 100%;
+  background-color: transparent;
+  margin: 10px 0;
+  height: 40px;
+  border-radius: 40px;
+  padding: 0 0.2rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 100%;
+      grid-template-columns: 100%;
+  position: relative;
+}
+
+.formCss:hover {
+  border-color: #018171;
+}
+
+.formCss input {
+  background: transparent;
+  outline: none;
+  border: none;
+  line-height: 1;
+  font-weight: 400;
+  font-size: 1.7rem;
+  color: #018171;
+  padding-left: 2%;
+}
+
+.errormsg {
+  text-align: center;
+  color: red;
+  font-size: small;
+}
 /*# sourceMappingURL=animaux.css.map */
