--- a/public/css/animaux.css
+++ b/public/css/animaux.css
@@ -1,247 +1,1 @@
-.affichagePics {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 2%;
-}
-
-.card {
-  color: var(--tc);
-  margin-bottom: 10px;
-  border-radius: 5px;
-  margin-top: 10px;
-  border: solid 2px #e8e8e9;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin-left: 5px;
-  margin-right: 5px;
-  max-width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.picStyle {
-  border-radius: 20px;
-  width: 350px;
-  height: 300px;
-}
-
-.textStyle {
-  padding: 3%;
-  font-size: 20px;
-  border: solid 1px white;
-  border-radius: 20px;
-  margin: 2%;
-  cursor: pointer;
-  color: #018171;
-  font: bold;
-}
-
-.textStyle:hover {
-  border-color: #018171;
-  color: #018171;
-}
-
-#animalImage {
-  margin: 10%;
-}
-
-#status {
-  font-size: 20px;
-  font: bold;
-}
-
-.listInfo {
-  max-width: -webkit-fit-content;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-  padding: 5%;
-  font-size: 20px;
-  font: bold;
-  color: white;
-  border: solid 1px white;
-  border-radius: 20px;
-  background-color: #70D76A;
-}
-
-#QRCodePic {
-  width: 100%;
-  height: 100%;
-  border-radius: 20px;
-  margin-top: 10%;
-}
-
-.QRCodeContainer {
-  border-radius: 20px;
-  border: solid 2px #70D76A;
-  padding: 2%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: 10%;
-}
-
-.iconQR {
-  font-size: 20px;
-  font: bold;
-  text-align: center;
-}
-
-.regimeContainer {
-  color: var(--tc);
-  margin-bottom: 10px;
-  border-radius: 5px;
-  margin-top: 10px;
-  border: solid 2px #e8e8e9;
-  width: 100%;
-  margin-left: 5px;
-  margin-right: 5px;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 5%;
-}
-
-.rechercheStyle {
-  margin: 10px;
-  border-radius: 20px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#rechercher {
-  border-radius: 20px;
-  cursor: text !important;
-}
-
-#donationButton {
-  margin-left: 35%;
-}
-
-/* The popup form - hidden by default */
-.form-popup {
-  display: none;
-  position: fixed;
-  bottom: 0;
-  right: 15px;
-  z-index: 9;
-  width: 50%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 5%;
-  margin-right: 23%;
-  background-color: white;
-  border-radius: 20px;
-  border: solid 2px #018171;
-  -webkit-box-shadow: 0 5px 5px rgba(255, 255, 255, 0.2);
-          box-shadow: 0 5px 5px rgba(255, 255, 255, 0.2);
-}
-
-/* Add styles to the form container */
-.form-container {
-  width: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 20px;
-  border-radius: 20px;
-  border: solid 2px #018171;
-  -webkit-box-shadow: 0 5px 5px rgba(255, 255, 255, 0.2);
-          box-shadow: 0 5px 5px rgba(255, 255, 255, 0.2);
-  margin-top: 2%;
-  margin-left: 30%;
-}
-
-.formCss {
-  border: solid 1px #e8e8e9;
-  width: 100%;
-  background-color: transparent;
-  margin: 10px 0;
-  height: 40px;
-  border-radius: 40px;
-  padding: 0 0.2rem;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 100%;
-      grid-template-columns: 100%;
-  position: relative;
-}
-
-.formCss:hover {
-  border-color: #018171;
-}
-
-.formCss input {
-  background: transparent;
-  outline: none;
-  border: none;
-  line-height: 1;
-  font-weight: 400;
-  font-size: 1.7rem;
-  color: #018171;
-  padding-left: 2%;
-}
-
-.errormsg {
-  text-align: center;
-  color: red;
-  font-size: small;
-}
-/*# sourceMappingURL=animaux.css.map */
+.affichagePics{display:flex;flex-direction:column;justify-content:center;align-items:center;margin:2%}.card{color:var(--tc);margin-bottom:10px;border-radius:5px;margin-top:10px;border:solid 2px #e8e8e9;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;margin-left:5px;margin-right:5px;max-width:100%;height:auto;display:flex;flex-wrap:wrap;flex-direction:row;justify-content:center;align-items:center}.picStyle{border-radius:20px;width:350px;height:300px}.textStyle{padding:3%;font-size:20px;border:solid 1px white;border-radius:20px;margin:2%;cursor:pointer;color:#018171;font:bold}.textStyle:hover{border-color:#018171;color:#018171}#animalImage{margin:10%}#status{font-size:20px;font:bold}.listInfo{max-width:-webkit-fit-content;max-width:-moz-fit-content;max-width:fit-content;padding:5%;font-size:20px;font:bold;color:white;border:solid 1px white;border-radius:20px;background-color:#70D76A}#QRCodePic{width:100%;height:100%;border-radius:20px;margin-top:10%}.QRCodeContainer{border-radius:20px;border:solid 2px #70D76A;padding:2%;display:flex;flex-direction:column;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;margin:10%}.iconQR{font-size:20px;font:bold;text-align:center}.regimeContainer{color:var(--tc);margin-bottom:10px;border-radius:5px;margin-top:10px;border:solid 2px #e8e8e9;width:100%;margin-left:5px;margin-right:5px;height:auto;display:flex;flex-wrap:wrap;flex-direction:column;justify-content:center;align-items:center;padding:5%}.rechercheStyle{margin:10px;border-radius:20px;justify-content:center;align-items:center}#rechercher{border-radius:20px;cursor:text !important}#donationButton{margin-left:35%}.form-popup{display:none;position:fixed;bottom:0;right:15px;z-index:9;width:50%;align-items:center;justify-content:center;margin-bottom:5%;margin-right:23%;background-color:white;border-radius:20px;border:solid 2px #018171;box-shadow:0 5px 5px rgba(255,255,255,0.2)}.form-container{width:50%;display:flex;flex-direction:column;padding:20px;border-radius:20px;border:solid 2px #018171;box-shadow:0 5px 5px rgba(255,255,255,0.2);margin-top:2%;margin-left:30%}.formCss{border:solid 1px #e8e8e9;width:100%;background-color:transparent;margin:10px 0;height:40px;border-radius:40px;padding:0 0.2rem;display:grid;grid-template-columns:100%;position:relative}.formCss:hover{border-color:#018171}.formCss input{background:transparent;outline:none;border:none;line-height:1;font-weight:400;font-size:1.7rem;color:#018171;padding-left:2%}.errormsg{text-align:center;color:red;font-size:small}.thumb img{height:70px}
